--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <artifactId>resizer</artifactId>
 
 
-    <version>1.4.2</version>
+    <version>1.4.3</version>
     <name>9Patch Resizer</name>
 
     <properties>
@@ -63,8 +63,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -80,85 +80,85 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.github.wvengen</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
-                <version>2.0.8</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>proguard</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <injar>${project.build.finalName}.jar</injar>
-                    <outjar>${project.build.finalName}-proguard.jar</outjar>
-                    <proguardInclude>proguard.txt</proguardInclude>
-                    <includeDependencyInjar>true</includeDependencyInjar>
-                    <libs>
-                        <lib>${java.home}/lib/rt.jar</lib>
-                    </libs>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.github.wvengen</groupId>-->
+<!--                <artifactId>proguard-maven-plugin</artifactId>-->
+<!--                <version>2.0.8</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>proguard</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <injar>${project.build.finalName}.jar</injar>-->
+<!--                    <outjar>${project.build.finalName}-proguard.jar</outjar>-->
+<!--                    <proguardInclude>proguard.txt</proguardInclude>-->
+<!--                    <includeDependencyInjar>true</includeDependencyInjar>-->
+<!--                    <libs>-->
+<!--                        <lib>${java.home}/lib/rt.jar</lib>-->
+<!--                    </libs>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>launch4j</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
-                        <artifactId>launch4j-maven-plugin</artifactId>
-                        <version>1.7.4</version>
-                        <executions>
-                            <execution>
-                                <id>launch4j</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>launch4j</goal>
-                                </goals>
-                                <configuration>
-                                    <headerType>gui</headerType>
-                                    <outfile>target/Resizer-${project.version}.exe</outfile>
-                                    <jar>target/resizer-${project.version}-proguard.jar</jar>
-                                    <classPath>
-                                        <mainClass>net.redwarp.tool.resizer.Main</mainClass>
-                                        <addDependencies>false</addDependencies>
-                                        <preCp>anything</preCp>
-                                    </classPath>
-                                    <jre>
-                                        <minVersion>1.6.0</minVersion>
-                                        <maxVersion/>
-                                        <jdkPreference>preferJre</jdkPreference>
-                                        <runtimeBits>64/32</runtimeBits>
-                                    </jre>
-                                    <icon>extra/icon_512.ico</icon>
-                                    <priority>normal</priority>
-                                    <singleInstance>
-                                        <mutexName>resizer</mutexName>
-                                        <windowTitle/>
-                                    </singleInstance>
-                                    <versionInfo>
-                                        <fileVersion>${project.version}.0</fileVersion>
-                                        <txtFileVersion>${project.version}</txtFileVersion>
-                                        <fileDescription>9Patch Resizer</fileDescription>
-                                        <copyright>Redwarp 2013-2015</copyright>
-                                        <productVersion>${project.version}.0</productVersion>
-                                        <txtProductVersion>${project.version}</txtProductVersion>
-                                        <productName>9Patch Resizer</productName>
-                                        <internalName>Resizer</internalName>
-                                        <originalFilename>Resizer.exe</originalFilename>
-                                    </versionInfo>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+<!--    <profiles>-->
+<!--        <profile>-->
+<!--            <id>launch4j</id>-->
+<!--            <build>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
+<!--                        <artifactId>launch4j-maven-plugin</artifactId>-->
+<!--                        <version>1.7.4</version>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>launch4j</id>-->
+<!--                                <phase>package</phase>-->
+<!--                                <goals>-->
+<!--                                    <goal>launch4j</goal>-->
+<!--                                </goals>-->
+<!--                                <configuration>-->
+<!--                                    <headerType>gui</headerType>-->
+<!--                                    <outfile>target/Resizer-${project.version}.exe</outfile>-->
+<!--                                    <jar>target/resizer-${project.version}-proguard.jar</jar>-->
+<!--                                    <classPath>-->
+<!--                                        <mainClass>net.redwarp.tool.resizer.Main</mainClass>-->
+<!--                                        <addDependencies>false</addDependencies>-->
+<!--                                        <preCp>anything</preCp>-->
+<!--                                    </classPath>-->
+<!--                                    <jre>-->
+<!--                                        <minVersion>1.6.0</minVersion>-->
+<!--                                        <maxVersion/>-->
+<!--                                        <jdkPreference>preferJre</jdkPreference>-->
+<!--                                        <runtimeBits>64/32</runtimeBits>-->
+<!--                                    </jre>-->
+<!--                                    <icon>extra/icon_512.ico</icon>-->
+<!--                                    <priority>normal</priority>-->
+<!--                                    <singleInstance>-->
+<!--                                        <mutexName>resizer</mutexName>-->
+<!--                                        <windowTitle/>-->
+<!--                                    </singleInstance>-->
+<!--                                    <versionInfo>-->
+<!--                                        <fileVersion>${project.version}.0</fileVersion>-->
+<!--                                        <txtFileVersion>${project.version}</txtFileVersion>-->
+<!--                                        <fileDescription>9Patch Resizer</fileDescription>-->
+<!--                                        <copyright>Redwarp 2013-2015</copyright>-->
+<!--                                        <productVersion>${project.version}.0</productVersion>-->
+<!--                                        <txtProductVersion>${project.version}</txtProductVersion>-->
+<!--                                        <productName>9Patch Resizer</productName>-->
+<!--                                        <internalName>Resizer</internalName>-->
+<!--                                        <originalFilename>Resizer.exe</originalFilename>-->
+<!--                                    </versionInfo>-->
+<!--                                </configuration>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+<!--        </profile>-->
+<!--    </profiles>-->
 </project>
